add final commit

--- a/src/main/resources/i18n/message.properties
+++ b/src/main/resources/i18n/message.properties
@@ -21,6 +21,18 @@ menu.addEvaluatin=ADD Evaluatin
 menu.evaluatins=Evaluatins
 menu.logout=LogOut
 menu.hello=Hello
-
+#classes
+classes.english=English
+classes.anatomy=Anatomy
+classes.biology=Biology
+classes.phisic=Phisic
+classes.chemestry=Chemestry
+classes.sumball=Sum ball
+#addStudent
+add.name=Name
+add.surname=Surname
+add.faculty=Faculty
+add.selectFoto=Select an image
+add.submit=Submit
 
 
