--- a/src/main/resources/i18n/message_ua.properties
+++ b/src/main/resources/i18n/message_ua.properties
@@ -21,3 +21,16 @@ menu.addEvaluatin=Додати оцінки
 menu.evaluatins=Рейнтиг
 menu.logout=Вийти
 menu.hello=Привіт
+#classes
+classes.english=Англійська
+classes.anatomy=Анатомія
+classes.biology=Біологія
+classes.phisic=Фізика
+classes.chemestry=Хімія
+classes.sumball=Сума баллів
+#addStudent
+add.name=Ім'я
+add.surname=Прізвище
+add.faculty=Факультет
+add.selectFoto=Виберіть фото
+add.submit=Продовжити
